log
Wed, Mar 26, 2025  8:10:35 PM: 
 tests:  0|6
total_score: 0/70
25021aa
Wed, Mar 26, 2025  8:11:41 PM: 
 tests:  0|6
total_score: 0/70
70b5bee
Wed, Mar 26, 2025  8:13:17 PM: 
 tests:  0|6
total_score: 0/70
57568d0
Wed, Mar 26, 2025  8:14:24 PM: 
 tests:  0|6
total_score: 0/70
5f3b2e4
Wed, Mar 26, 2025  8:17:25 PM: 
In file included from test.c:5:0:
list.c: In function 'popCurrent':
list.c:156:15: error: unused variable 'eliminar' [-Werror=unused-variable]
         Node* eliminar = list->current;
               ^~~~~~~~
list.c:182:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
12cfd9b
Wed, Mar 26, 2025  8:19:36 PM: 
In file included from test.c:5:0:
list.c: In function 'popCurrent':
list.c:156:15: error: unused variable 'eliminar' [-Werror=unused-variable]
         Node* eliminar = list->current;
               ^~~~~~~~
list.c:182:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
2ea6de4
Wed, Mar 26, 2025  8:20:00 PM: 
In file included from test.c:5:0:
list.c: In function 'popCurrent':
list.c:156:15: error: unused variable 'eliminar' [-Werror=unused-variable]
         Node* eliminar = list->current;
               ^~~~~~~~
list.c:182:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
806a805
Wed, Mar 26, 2025  8:20:41 PM: 
In file included from test.c:5:0:
list.c: In function 'popCurrent':
list.c:156:15: error: unused variable 'eliminar' [-Werror=unused-variable]
         Node* eliminar = list->current;
               ^~~~~~~~
list.c:182:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
6697103
Wed, Mar 26, 2025  8:21:17 PM: 
In file included from test.c:5:0:
list.c: In function 'popCurrent':
list.c:156:15: error: unused variable 'eliminar' [-Werror=unused-variable]
         Node* eliminar = list->current;
               ^~~~~~~~
list.c:182:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
628646a
Wed, Mar 26, 2025  8:21:53 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:0:
list.c: In function 'popCurrent':
list.c:183:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
20f9344
Wed, Mar 26, 2025  8:24:04 PM: 
In file included from test.c:5:0:
list.c: In function 'popCurrent':
list.c:183:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
8e8d872
